...
    MyFilledButton(
        onClick = onClick,
        text = "Reset Password",
        modifier = Modifier
            .fillMaxWidth()
            .padding(top = 20.dp)
            .testTag("reset_password_button")
    )
}

@Preview(showBackground = true)
@Composable
fun ResetPasswordPreview() {
...
