...
            verticalArrangement = Arrangement.spacedBy(8.dp)
        ) {
            items(appointments, key = { it.appointmentId }) { appointment ->
                AppointmentCell(
                    appointment = appointment,
                    onClick = { selectedAppointment = appointment },
                    modifier = modifier.testTag("appointment_cell")
                )
            }
        }

        /**
         * Add appointment dialog
...
    modifier: Modifier = Modifier
) {
    CustomOutlinedButton(
        onClick = onClick,
        text = "+ Add appointment",
        modifier = modifier
            .testTag("book_appointment_button")
            .height(60.dp)
    )
}

@Preview(showBackground = true)
@Composable
...
