...
                }

                if (step == 2) {
                    WheelDateTimePickerView(
                        modifier = Modifier
                            .fillMaxWidth()
                            .testTag("date_time_picker"),
                        showDatePicker = true,
                        height = 200.dp,
                        rowCount = 3,
                        yearsRange = 2024..2030,
                        dateTimePickerView = DateTimePickerView.DIALOG_VIEW,
                        onDoneClick = { selectedDateTime ->
...
